--- a/studio/src/components/previews/banners/MagazineFrontpage.css
+++ b/studio/src/components/previews/banners/MagazineFrontpage.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Lora&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Larsseit&display=swap');
 
 .banner {
   position: relative;
@@ -19,23 +19,22 @@
 }
 
 .content {
+  font-family: Larsseit;
   position: absolute;
   bottom: 5%;
   color: white;
-  text-shadow: 1px 1px 0px #000;
-  opacity: 0.7;
+  opacity: 0.8;
   padding: 1em;
 }
 
 .heading {
-  font-weight: 900;
-  font-size: 2.2em;
-  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 5em;
   letter-spacing: 1px;
   line-height: 1;
 }
 
 .tagline {
-  font-weight: 900;
-  font-size: 0.8em;
+  font-weight: 500;
+  font-size: 2em;
 }
