--- a/studio/src/components/previews/banners/NewyorkBanner.css
+++ b/studio/src/components/previews/banners/NewyorkBanner.css
@@ -1,6 +1,7 @@
-@import url('https://fonts.googleapis.com/css?family=Lora&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Larsseit&display=swap');
 
 .banner {
+  font-family: Larsseit, sans-serif;
   position: relative;
   display: flex;
   height: 100%;
@@ -20,19 +21,24 @@
 
 .content {
   position: absolute;
-  bottom: 5%;
+  width: 100%;
+  height: 100%;
   color: white;
-  opacity: 0.7;
-  padding: 1em;
 }
 
 .heading {
-  font-size: 1.2em;
-  text-transform: uppercase;
-  letterspacing: 1px;
-  line-height: 1;
+  position: absolute;
+  top: 5%;
+  left: 95%;
+  transform: rotateZ(90deg);
+  transform-origin: left top;
+  font-size: 2.1em;
+  letter-spacing: 1px;
+  line-height: 1.2;
 }
 
 .tagline {
-  font-size: 0.8em;
+  position: absolute;
+  bottom: 8%;
+  font-size: 0.6em;
 }
