--- a/studio/src/components/previews/banners/OsakaBanner.css
+++ b/studio/src/components/previews/banners/OsakaBanner.css
@@ -19,20 +19,20 @@
 }
 
 .content {
-  position: absolute;
-  bottom: 5%;
   color: white;
   opacity: 0.7;
   padding: 0.5em;
 }
 
 .heading {
-  font-size: 0.8em;
-  text-transform: uppercase;
-  letterspacing: 1px;
-  line-height: 1.1;
+  position: absolute;
+  font-size: 2.1em;
+  letter-spacing: 1px;
+  line-height: 1.2;
 }
 
 .tagline {
-  font-size: 0.5em;
+  position: absolute;
+  bottom: 8%;
+  font-size: 1em;
 }
